[package]
name = "unityproxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
env_logger = { version = "0.11.5", optional = true }
hickory-resolver = { version = "0.24.1", optional = true }
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["http1", "client", "server"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.8", features = ["http1", "tokio", "server", "client", "client-legacy"] }
log = "0.4.22"
rustls-native-certs = { version = "0.8.0", optional = true }
tokio = { version = "1.40.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.26.0", optional = true }
tokio-util = { version = "0.7.12", features = ["rt"] }

[features]
default = ["use-rustls"]
dns-resolver = ["hickory-resolver"]
binary = ["env_logger", "tokio/macros"]
use-native-tls = ["tokio-native-tls"]
use-rustls = ["tokio-rustls", "rustls-native-certs"]
